--- a/doc/man/man3/libft.h.3
+++ b/doc/man/man3/libft.h.3
@@ -1,4 +1,4 @@
-.TH "include/libft.h" 3 "Sat Jan 27 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
+.TH "include/libft.h" 3 "Fri Feb 2 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -21,6 +21,8 @@ include/libft.h
 \fC#include 'ft_memory\&.h'\fP
 .br
 \fC#include 'ft_string\&.h'\fP
+.br
+\fC#include 'ft_dlclst\&.h'\fP
 .br
 
 .SH "Detailed Description"
