--- a/doc/man/man3/s_list.3
+++ b/doc/man/man3/s_list.3
@@ -1,4 +1,4 @@
-.TH "s_list" 3 "Fri Feb 2 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
+.TH "s_list" 3 "Sat Feb 3 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -8,7 +8,7 @@ s_list \- Base for typedef \fBt_list\fP for a linked list node\&.
 .br
 .PP
 .PP
-\fC#include <ft_dlclst\&.h>\fP
+\fC#include <ft_llst\&.h>\fP
 .SS "Data Fields"
 
 .in +1c
