--- a/doc/man/man3/ft_dlclst.h.3
+++ b/doc/man/man3/ft_dlclst.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_dlclst.h" 3 "Fri Feb 2 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
+.TH "include/ft_dlclst.h" 3 "Sat Feb 3 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -12,6 +12,7 @@ include/ft_dlclst.h
 .ti -1c
 .RI "struct \fBs_dlclst\fP"
 .br
+.RI "Base for typedef \fBt_dlclst\fP for a doubly linked circular list node\&. "
 .in -1c
 .SS "Typedefs"
 
@@ -70,11 +71,37 @@ include/ft_dlclst.h
 .ti -1c
 .RI "\fBt_dlclst\fP * \fBft_dlclst_map\fP (\fBt_dlclst\fP *l, void *(*f)(void *), void(*d)(void *))"
 .br
-.RI "\fBft_lstmap\fP -- Returns new list based on applying f to each nodes content\&. "
+.RI "\fBft_dlclst_map\fP -- Returns new list based on applying f to each nodes content\&. "
+.ti -1c
+.RI "int \fBft_dlclst_search\fP (\fBt_dlclst\fP *l, int(*cmp)(void *, void *), void *co)"
+.br
+.RI "\fBft_dlclst_search\fP -- Search content inside the list\&. "
+.ti -1c
+.RI "void \fBft_dlclst_rotatenext\fP (\fBt_dlclst\fP **lst, unsigned int n)"
+.br
+.RI "\fBft_dlclst_rotatenext\fP -- Shifts the head of the list in the 'next' direction\&. "
+.ti -1c
+.RI "void \fBft_dlclst_rotateprev\fP (\fBt_dlclst\fP **lst, unsigned int n)"
+.br
+.RI "\fBft_dlclst_rotateprev\fP -- Shifts the head of the list in the 'prev' direction\&. "
+.ti -1c
+.RI "void \fBft_dlclst_swapfront\fP (\fBt_dlclst\fP **lst)"
+.br
+.RI "\fBft_dlclst_swapfront\fP -- Swaps the first and second elements of the list\&. "
+.ti -1c
+.RI "void \fBft_dlclst_swapback\fP (\fBt_dlclst\fP **lst)"
+.br
+.RI "\fBft_dlclst_swapback\fP -- Swaps the last and next to last elements of the list\&. "
 .in -1c
 .SH "Detailed Description"
 .PP 
 Doubly linked circular list implementation\&. Part of libft library\&. 
+.br
+ A dlclst has a head which points to the node that is to be interpreted as the begining of the list or its first element\&. In the same way, the list alsohas a last element which will be the node pointed to by the 'prev' field of the head node\&. 
+.br
+ In a dlclst list with just one element, that element will point to itself\&. That is, the only node will be the first and the last at the same time\&. 
+.br
+ In this sense, due to the circular nature of the dlclst list, NO check is performed against the size of the list while operating on their elements and traversing the list\&. A value for position or steps from one node to another that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
 .SH "Function Documentation"
 .PP 
 .SS "void ft_dlclst_clear (\fBt_dlclst\fP ** lst, void(*)(void *) del)"
@@ -168,7 +195,9 @@ Implementation notes:
 .PP
 \fBWarning\fP
 .RS 4
-NO check is performed for NULL pointers passed as arguments\&. In such cases, CRASHING is guaranteed\&.
+NO check is performed for NULL pointers passed as arguments\&. In such cases, CRASHING is guaranteed\&. 
+.br
+ NO check is performed for element position as relative to the size of the list\&. A value for position or steps that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&.
 .RE
 .PP
 \fBRemarks\fP
@@ -218,9 +247,7 @@ A pointer to the last node of the list\&.
 .SS "\fBt_dlclst\fP * ft_dlclst_map (\fBt_dlclst\fP * l, void *(*)(void *) f, void(*)(void *) d)"
 
 .PP
-\fBft_lstmap\fP -- Returns new list based on applying f to each nodes content\&. Iterates the list ’lst’ and applies the function ’f’ on the content of each node\&. Creates a new list resulting of the successive applications of the function ’f’\&. The ’del’ function is used to delete the content of a node if needed\&. If at some point the funcion fails, the in-construction new list must is cleared completely and NULL pointer is returned\&.
-.PP
-If an error occurs while creating the new list, every memory is freed and a NULL is returned\&.
+\fBft_dlclst_map\fP -- Returns new list based on applying f to each nodes content\&. Iterates the list ’lst’ and applies the function ’f’ on the content of each node\&. Creates a new list resulting of the successive applications of the function ’f’\&. The ’del’ function is used to delete the content of a node if needed\&. If at some point the funcion fails, the in-construction new list must is cleared completely and NULL pointer is returned\&. If an error occurs while creating the new list, every memory is freed and a NULL is returned\&.
 .PP
 \fBParameters\fP
 .RS 4
@@ -353,7 +380,65 @@ EXTERNAL FUNCTION USED: free()\&.
 .RS 4
 EXTERNAL FUNCTION USED: free()\&. 
 .br
- 
+ NO check is performed for element position as relative to the size of the list\&. A value for position or steps that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
+.RE
+.PP
+
+.SS "void ft_dlclst_rotatenext (\fBt_dlclst\fP ** lst, unsigned int n)"
+
+.PP
+\fBft_dlclst_rotatenext\fP -- Shifts the head of the list in the 'next' direction\&. Moves the pointer that points to the head/front of the list 'n' steps in the 'next' direction, thus making the element in the n-th position the new head/front of the list\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of a pointer to the first node of a list\&.
+.br
+\fIn\fP - The steps to move the head of the list\&.
+.RE
+.PP
+\fBWarning\fP
+.RS 4
+NO check is performed for element position as relative to the size of the list\&. A value for position or steps that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
+.RE
+.PP
+
+.SS "void ft_dlclst_rotateprev (\fBt_dlclst\fP ** lst, unsigned int n)"
+
+.PP
+\fBft_dlclst_rotateprev\fP -- Shifts the head of the list in the 'prev' direction\&. Moves the pointer that points to the head/front of the list 'n' steps in the 'prev' direction, thus making the element in the (size -n)-th position the new head/front of the list\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of a pointer to the first node of a list\&.
+.br
+\fIn\fP - The steps to move the head of the list\&.
+.RE
+.PP
+\fBWarning\fP
+.RS 4
+NO check is performed for element position as relative to the size of the list\&. A value for position or steps that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
+.RE
+.PP
+
+.SS "int ft_dlclst_search (\fBt_dlclst\fP * l, int(*)(void *, void *) cmp, void * co)"
+
+.PP
+\fBft_dlclst_search\fP -- Search content inside the list\&. Iterates the list ’lst’ and applies the function ’cmp’ to compare the content of each node with the content passed as argument\&. The first time a match is detected (in the next direction), the position of the element is returned\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIl\fP - The pointer to a list\&. If NULL, -1 is returned\&.
+.br
+\fIcmp\fP - The address of the function that shall be applied on every node's content while traversing the original list to compare it against the content 'co'\&. This function returns a non-zero value if there is a match\&. This function must be capable of handling a NULL content pointer\&.
+.br
+\fIco\fP - The address of a content to be compared against each node's content\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+The position of the first node (in the next direction) which content matches the content passed as an argument\&. 
+.br
+ A -1 is returned if there is no match\&. 
 .RE
 .PP
 
@@ -372,6 +457,28 @@ EXTERNAL FUNCTION USED: free()\&.
 The length of the list\&. 
 .br
  If lst == NULL a 0 value is returned\&. 
+.RE
+.PP
+
+.SS "void ft_dlclst_swapback (\fBt_dlclst\fP ** lst)"
+
+.PP
+\fBft_dlclst_swapback\fP -- Swaps the last and next to last elements of the list\&. Swaps the last and next to last elements of the list\&. The head of the list may change accordingly (i\&.e\&. in a list with just two elements)\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of a pointer to the first node of a list\&. 
+.RE
+.PP
+
+.SS "void ft_dlclst_swapfront (\fBt_dlclst\fP ** lst)"
+
+.PP
+\fBft_dlclst_swapfront\fP -- Swaps the first and second elements of the list\&. Swaps the first and second elements of the list\&. The head of the list changes accordingly\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of a pointer to the first node of a list\&. 
 .RE
 .PP
 
