--- a/doc/man/man3/ft_dlclst.h.3
+++ b/doc/man/man3/ft_dlclst.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_dlclst.h" 3 "Sun Feb 4 2024" "Version 2024-01-27" "Library libft" \" -*- nroff -*-
+.TH "include/ft_dlclst.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -92,6 +92,18 @@ include/ft_dlclst.h
 .RI "void \fBft_dlclst_swapback\fP (\fBt_dlclst\fP **lst)"
 .br
 .RI "\fBft_dlclst_swapback\fP -- Swaps the last and next to last elements of the list\&. "
+.ti -1c
+.RI "\fBt_dlclst\fP * \fBft_dlclst_extractfront\fP (\fBt_dlclst\fP **lst)"
+.br
+.RI "\fBft_dlclst_extractfront\fP -- Removes the first node of the list and returns it\&. "
+.ti -1c
+.RI "\fBt_dlclst\fP * \fBft_dlclst_extractback\fP (\fBt_dlclst\fP **lst)"
+.br
+.RI "\fBft_dlclst_extractback\fP -- Removes the last node of the list and returns it\&. "
+.ti -1c
+.RI "\fBt_dlclst\fP * \fBft_dlclst_extractpos\fP (\fBt_dlclst\fP **lst, unsigned int pos)"
+.br
+.RI "\fBft_dlclst_extractpos\fP -- Removes the node of the list at given position and returns it\&. "
 .in -1c
 .SH "Detailed Description"
 .PP 
@@ -123,6 +135,71 @@ Doubly linked circular list implementation\&. Part of libft library\&.
 EXTERNAL FUNCTION USED: free()\&. 
 .br
  
+.RE
+.PP
+
+.SS "\fBt_dlclst\fP * ft_dlclst_extractback (\fBt_dlclst\fP ** lst)"
+
+.PP
+\fBft_dlclst_extractback\fP -- Removes the last node of the list and returns it\&. Takes as a parameter the address of the pointer to the first node of the list, removes it from the list and returns it\&. The pointers of the 
+.br
+ remaining nodes of the list are updated in order to maintain the consistency of the circular list\&. 
+.br
+ The pointer to lst might be updated to represent the new first element of the list\&. It will be NULL if the removed node was the only element in the list\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of the pointer to the first node of the list\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+The extracted node\&. 
+.RE
+.PP
+
+.SS "\fBt_dlclst\fP * ft_dlclst_extractfront (\fBt_dlclst\fP ** lst)"
+
+.PP
+\fBft_dlclst_extractfront\fP -- Removes the first node of the list and returns it\&. Takes as a parameter the address of the pointer to the first node of the list, removes it from the list and returns it\&. The pointers of the remaining nodes of the list are updated in orderr to maintain the consistency of the circular list\&. 
+.br
+ The pointer to lst is updated to represent the new first element of the list\&. It will be NULL if the removed node was the only element in the list\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of the pointer to the first node of the list\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+The extracted node\&. 
+.RE
+.PP
+
+.SS "\fBt_dlclst\fP * ft_dlclst_extractpos (\fBt_dlclst\fP ** lst, unsigned int pos)"
+
+.PP
+\fBft_dlclst_extractpos\fP -- Removes the node of the list at given position and returns it\&. Takes as a parameter the address of the pointer to the first node of the list, removes the node that occupies the given position from the list and returns it\&. The pointers of the remaining nodes of the list are updated in order to maintain the consistency of the circular list\&. 
+.br
+ The pointer to lst might be updated to represent the new first element of the list\&. It will be NULL if the removed node was the only element in the list\&.
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The address of the pointer to the first node of the list\&.
+.br
+\fIpos\fP - Positive value representing the position in the list of the node to be extracted (always in the next direction, first node has a position of 0)\&. 
+.br
+ A zero value produces the same result as \fBft_dlclst_extractfront()\fP\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+The extracted node\&. 
+.RE
+.PP
+\fBWarning\fP
+.RS 4
+NO check is performed for element position as relative to the size of the list\&. A value for position or steps that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
 .RE
 .PP
 
@@ -371,7 +448,7 @@ EXTERNAL FUNCTION USED: free()\&.
 .br
 \fId\fP - The address of the function that shall be used to properly free only the content of the node\&. This function must be capable of handling a NULL content pointer\&.
 .br
-\fIpos\fP - Positive value representing the position the new node will have inside the list (always in the next direction, first node has 0 pos)\&. 
+\fIpos\fP - Positive value representing the position in the list of the node to be removed (always in the next direction, first node has 0 pos)\&. 
 .br
  A zero value produces the same result as \fBft_dlclst_remfront()\fP\&.
 .RE
