ADDED functions to manipulate string arrays
Functions to manipulate argv-style NULL-terminated array of
nul-terminated c-strings were added.

Makefile was updated to show less output for clarity in other
projects that use this library.

Documentation was updated.

Former ft_get_sym_table() function was removed from the public
header and included as static inside the files of the functions
that use it: ft_itoa_b, ft_ltoa_b, ft_ultoa_b, ft_uitoa_b.

--- a/doc/man/man3/ft_dlclst.h.3
+++ b/doc/man/man3/ft_dlclst.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_dlclst.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
+.TH "include/ft_dlclst.h" 3 "Tue Jul 16 2024" "Version 2024-07-16" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -114,6 +114,10 @@ Doubly linked circular list implementation\&. Part of libft library\&.
  In a dlclst list with just one element, that element will point to itself\&. That is, the only node will be the first and the last at the same time\&. 
 .br
  In this sense, due to the circular nature of the dlclst list, NO check is performed against the size of the list while operating on their elements and traversing the list\&. A value for position or steps from one node to another that could cause an overflow of the head of the list is allowed and will be interpreted consistently with the circular nature of the list\&. 
+.SH "Typedef Documentation"
+.PP 
+.SS "\fBt_dlclst\fP"
+Based on the \fBs_dlclst\fP struct\&. 
 .SH "Function Documentation"
 .PP 
 .SS "void ft_dlclst_clear (\fBt_dlclst\fP ** lst, void(*)(void *) del)"
