--- a/doc/man/man3/ft_file.h.3
+++ b/doc/man/man3/ft_file.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_file.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
+.TH "include/ft_file.h" 3 "Tue Jul 16 2024" "Version 2024-07-16" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -83,7 +83,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIc\fP - The character to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBWarning\fP
@@ -108,7 +110,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIc\fP - The character to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBReturns\fP
@@ -138,7 +142,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIs\fP - The c-string to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBWarning\fP
@@ -163,7 +169,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIn\fP - The integer value to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBWarning\fP
@@ -188,7 +196,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIs\fP - The c-string to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBWarning\fP
@@ -211,7 +221,9 @@ Implementation notes:
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&. TODO
+\fIs\fP - The c-string to write\&.
+.br
+\fIfd\fP - The valid file descriptor to write to\&.
 .RE
 .PP
 \fBReturns\fP
