--- a/doc/man/man3/ft_llst.h.3
+++ b/doc/man/man3/ft_llst.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_llst.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
+.TH "include/ft_llst.h" 3 "Tue Jul 16 2024" "Version 2024-07-16" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -64,6 +64,10 @@ include/ft_llst.h
 .SH "Detailed Description"
 .PP 
 Linked list implementation\&. Part of libft library\&. 
+.SH "Typedef Documentation"
+.PP 
+.SS "\fBt_list\fP"
+Based on the \fBs_list\fP struct\&. 
 .SH "Function Documentation"
 .PP 
 .SS "void ft_lstadd_back (\fBt_list\fP ** lst, \fBt_list\fP * new)"
