--- a/doc/man/man3/ft_math.h.3
+++ b/doc/man/man3/ft_math.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_math.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
+.TH "include/ft_math.h" 3 "Tue Jul 16 2024" "Version 2024-07-16" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -26,7 +26,9 @@ Math related functions\&. Part of libft library\&.
 .PP
 \fBParameters\fP
 .RS 4
-\fI-\fP \&.TODO\&.
+\fIbase\fP - The base as an integer value\&.
+.br
+\fIexp\fP - The exponent as an unsigned int value\&.
 .RE
 .PP
 \fBReturns\fP
