--- a/doc/man/man3/libft.h.3
+++ b/doc/man/man3/libft.h.3
@@ -1,4 +1,4 @@
-.TH "include/libft.h" 3 "Mon Feb 5 2024" "Version 2024-02-05" "Library libft" \" -*- nroff -*-
+.TH "include/libft.h" 3 "Tue Jul 16 2024" "Version 2024-07-16" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -23,6 +23,8 @@ include/libft.h
 \fC#include 'ft_string\&.h'\fP
 .br
 \fC#include 'ft_dlclst\&.h'\fP
+.br
+\fC#include 'ft_strarr\&.h'\fP
 .br
 
 .SH "Detailed Description"
