--- a/doc/man/man3/ft_dlclst.h.3
+++ b/doc/man/man3/ft_dlclst.h.3
@@ -1,4 +1,4 @@
-.TH "include/ft_dlclst.h" 3 "Thu Jul 25 2024" "Version 2024-07-25" "Library libft" \" -*- nroff -*-
+.TH "include/ft_dlclst.h" 3 "Thu Aug 15 2024" "Version 2024-08-15" "Library libft" \" -*- nroff -*-
 .ad l
 .nh
 .SH NAME
@@ -104,6 +104,14 @@ include/ft_dlclst.h
 .RI "\fBt_dlclst\fP * \fBft_dlclst_extractpos\fP (\fBt_dlclst\fP **lst, unsigned int pos)"
 .br
 .RI "\fBft_dlclst_extractpos\fP -- Removes the node of the list at given position and returns it\&. "
+.ti -1c
+.RI "void * \fBft_dlclst_peek_offset\fP (\fBt_dlclst\fP *head, int offset)"
+.br
+.RI "\fBft_dlclst_peek_offset\fP -- Returns content of list element by offset from head\&. "
+.ti -1c
+.RI "void * \fBft_dlclst_peek_pos\fP (\fBt_dlclst\fP *lst, unsigned int pos)"
+.br
+.RI "\fBft_dlclst_peek_pos\fP -- Returns content of list element in position\&. "
 .in -1c
 .SH "Detailed Description"
 .PP 
@@ -386,6 +394,66 @@ Implementation notes:
  Argument content is NOT checked for NULL, a node with NULL content is returned\&. 
 .br
  If malloc fails, must return NULL\&. 
+.RE
+.PP
+
+.SS "void * ft_dlclst_peek_offset (\fBt_dlclst\fP * head, int offset)"
+
+.PP
+\fBft_dlclst_peek_offset\fP -- Returns content of list element by offset from head\&. 
+.PP
+\fBParameters\fP
+.RS 4
+\fIhead\fP - The head (first element) of the list\&.
+.br
+\fIoffset\fP - Positions from head in the next (positive offset) or the prev (negative offset) direction\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+A void pointer to the content of the referenced element\&. 
+.br
+ NULL pointer is returned if head is NULL or the offset is invalid\&.
+.RE
+.PP
+\fBWarning\fP
+.RS 4
+Offset absolute values greater than size are considered invalid and NULL is returned\&. 
+.RE
+.PP
+
+.SS "void * ft_dlclst_peek_pos (\fBt_dlclst\fP * lst, unsigned int pos)"
+
+.PP
+\fBft_dlclst_peek_pos\fP -- Returns content of list element in position\&. Returns the content of the list element in position\&. 
+.br
+ The pos argument is \fBnot tested against the list \fBft_dlclst_size()\fP\fP\&. That implies that a pos greater than or equal to \fBft_dlclst_size()\fP, overflows in the next direction in a circular fashion\&. 
+.br
+ So, the element peeked is actually the one in the position: 
+.br
+ pos % \fBft_dlclst_size()\fP)
+.PP
+\fBParameters\fP
+.RS 4
+\fIlst\fP - The pointer to the first element of the list\&.
+.br
+\fIpos\fP - Position in the next direction from the head of the list\&. This argument is not tested against \fBft_dlclst_size()\fP and behaves as a circular index if greather or equal\&.
+.RE
+.PP
+\fBReturns\fP
+.RS 4
+A void pointer to the content of the referenced element\&. 
+.br
+ NULL pointer is returned if head is NULL or the offset is invalid\&.
+.RE
+.PP
+\fBWarning\fP
+.RS 4
+The pos argument is \fBnot tested against the list \fBft_dlclst_size()\fP\fP\&. That implies that a pos greater than or equal to \fBft_dlclst_size()\fP, overflows in the next direction in a circular fashion\&. 
+.br
+ So, the element peeked is actually the one in the position: 
+.br
+ pos % \fBft_dlclst_size()\fP) 
 .RE
 .PP
 
